[project]
name = "onrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.8",
    "fastapi>=0.136.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.14",
    "numpy>=2.4.4",
    "openai>=2.32.0",
    "openai-whisper>=20250625",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.2",
    "scipy>=1.17.1",
    "sounddevice>=0.5.5",
    "uvicorn>=0.44.0",
]
